# rustjeeves

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  MODULES_TODO.md  PLAN.md  README.md  SOUL.md  SPEC.md  build-all.sh  build-modules.sh  module-capabilities.toml  test-all.sh
.codex/: config.toml
.github/workflows/: ci.yml
.grove/: config.json
.serena/: project.yml
crates/jeeves/: Cargo.toml
crates/jeeves-abi/: Cargo.toml
crates/jeeves-abi/src/: lib.rs
crates/jeeves/src/: action.rs  adminapi.rs  ai.rs  backup.rs  casemapping.rs  commands.rs  config.rs  data_lifecycle.rs  db.rs  deepl.rs  dictionary.rs  geo.rs  local_time.rs  log_bus.rs  main.rs  perms.rs  publicweb.rs  runtime.rs  scheduler.rs  search.rs  settings.rs  theme.rs  weather.rs  youtube.rs
crates/jeeves/src/irc/: mod.rs
crates/jeeves/src/modules/: host_fns.rs  mod.rs
crates/jeeves/src/tui/: mod.rs
modules/: .gitkeep
modules-src/achievements/: Cargo.toml
modules-src/achievements/src/: lib.rs
modules-src/admin/: Cargo.toml
modules-src/admin/src/: lib.rs
modules-src/ai/: Cargo.toml
modules-src/ai/src/: lib.rs
modules-src/banter/: Cargo.toml
modules-src/banter/src/: lib.rs
modules-src/calc/: Cargo.toml
modules-src/calc/src/: lib.rs
modules-src/clock/: Cargo.toml
modules-src/clock/src/: lib.rs
modules-src/darts/: Cargo.toml
modules-src/darts/src/: lib.rs
modules-src/define/: Cargo.toml
modules-src/define/src/: lib.rs
modules-src/fishing/: Cargo.toml  fish_database.json
modules-src/fishing/src/: lib.rs
modules-src/history/: Cargo.toml
modules-src/history/src/: lib.rs
modules-src/hunt/: Cargo.toml
modules-src/hunt/src/: lib.rs
modules-src/karma/: Cargo.toml
modules-src/karma/src/: lib.rs
modules-src/memos/: Cargo.toml
modules-src/memos/src/: lib.rs
modules-src/operator/: Cargo.toml
modules-src/operator/src/: lib.rs
modules-src/pug/: Cargo.toml
modules-src/pug/src/: lib.rs
modules-src/reminders/: Cargo.toml
modules-src/reminders/src/: lib.rs
modules-src/roadtrip/: Cargo.toml
modules-src/roadtrip/src/: lib.rs
modules-src/search/: Cargo.toml
modules-src/search/src/: lib.rs
modules-src/tarot/: Cargo.toml
modules-src/tarot/src/: lib.rs
modules-src/translate/: Cargo.toml
modules-src/translate/src/: lib.rs
modules-src/users/: Cargo.toml
modules-src/users/src/: lib.rs
modules-src/weather/: Cargo.toml
modules-src/weather/src/: lib.rs
modules-src/wordle/: Cargo.toml
modules-src/wordle/src/: lib.rs
modules-src/youtube/: Cargo.toml
modules-src/youtube/src/: lib.rs
