# Standalone workspace so the root workspace does not build this WASM crate.
[workspace]

[package]
name = "ai"
version = "0.1.0"
edition = "2021"
description = "Addressed OpenAI-compatible AI responder for rustjeeves"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
jeeves-abi = { path = "../../crates/jeeves-abi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
