[workspace]

[package]
name = "banter"
version = "0.1.0"
edition = "2021"
description = "Small channel rituals for sailing and crow calls"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
jeeves-abi = { path = "../../crates/jeeves-abi" }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
