# Standalone workspace so the root workspace does not build this WASM crate.
[workspace]

[package]
name = "clock"
version = "0.1.0"
edition = "2021"
description = "Local-time module for rustjeeves (!time via profiles or locations)"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
jeeves-abi = { path = "../../crates/jeeves-abi" }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
