[workspace]

[package]
name = "define"
version = "0.1.0"
edition = "2021"
description = "Keyless dictionary definition module for rustjeeves (!define)"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
jeeves-abi = { path = "../../crates/jeeves-abi" }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
