# Standalone workspace so `cargo build --workspace` at the repo root doesn't build this wasm crate.
#   cargo build --release --target wasm32-unknown-unknown
[workspace]

[package]
name = "karma"
version = "0.1.0"
edition = "2021"
description = "Channel-local karma module for rustjeeves (nick++ / nick-- / !karma)"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
jeeves-abi = { path = "../../crates/jeeves-abi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
