# Standalone workspace for the !pug WASM module.
[workspace]

[package]
name = "pug"
version = "0.1.0"
edition = "2021"
description = "Random pug photo link module for rustjeeves (!pug)"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
jeeves-abi = { path = "../../crates/jeeves-abi" }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
