# Standalone workspace so `cargo build --workspace` at the repo root (host target) doesn't try to
# build this wasm-only crate. Build it explicitly with:
#   cargo build --release --target wasm32-unknown-unknown
[workspace]

[package]
name = "users"
version = "0.1.0"
edition = "2021"
description = "User profiles module for rustjeeves (!whoami/!title/!birthday/!pronouns/!location)"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
jeeves-abi = { path = "../../crates/jeeves-abi" }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
