[workspace]

[package]
name = "youtube"
version = "0.1.0"
edition = "2021"
description = "YouTube search and opt-in link announcements for rustjeeves"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
jeeves-abi = { path = "../../crates/jeeves-abi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
